# xifa

./: .gitignore  LICENSE  README.md  bfi.py  setup.cfg
examples/: big5.ipynb  ipip300v1.ipynb  ipip300v2.ipynb  ipip50.ipynb
xifa/: __init__.py  base.py  gpcm.py  grm.py  mhrm.py  utils.py
xifa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
