[metadata]
name = xifa
version = 0.1.5
author = Po-Hsien Huang
author_email = psyphh@gmail.com
description = Accelerated Item Factor Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/psyphh/xifa
project_urls =
    Bug Tracker = https://github.com/psyphh/xifa/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
